--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.0.0",
-    "@angular/common": "18.0.0",
-    "@angular/compiler": "18.0.0",
-    "@angular/core": "18.0.0",
-    "@angular/forms": "18.0.0",
-    "@angular/platform-browser": "18.0.0",
-    "@angular/platform-browser-dynamic": "18.0.0",
-    "@angular/router": "18.0.0",
-    "@primeng/themes": "18.0.0",
+    "@angular/animations": "19.1.7",
+    "@angular/common": "19.1.7",
+    "@angular/compiler": "19.1.7",
+    "@angular/core": "19.1.7",
+    "@angular/forms": "19.1.7",
+    "@angular/platform-browser": "19.1.7",
+    "@angular/platform-browser-dynamic": "19.1.7",
+    "@angular/router": "19.1.7",
+    "@primeng/themes": "^19.0.7",
     "primeicons": "7.0.0",
-    "primeng": "18.0.0"
+    "primeng": "^19.0.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.0.0",
-    "@angular/cli": "18.0.0",
-    "@angular/compiler-cli": "18.0.0",
+    "@angular-devkit/build-angular": "19.1.8",
+    "@angular/cli": "19.1.8",
+    "@angular/compiler-cli": "19.1.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
@@ -33,6 +33,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.3"
   }
 }
