--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "json-server": "json-server --watch db.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -19,6 +20,7 @@
     "@angular/platform-browser-dynamic": "19.1.7",
     "@angular/router": "19.1.7",
     "@primeng/themes": "^19.0.7",
+    "json-server": "^1.0.0-beta.3",
     "primeicons": "7.0.0",
     "primeng": "^19.0.7"
   },
