--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "19.1.7",
     "@primeng/themes": "^19.0.7",
     "json-server": "^1.0.0-beta.3",
-    "primeicons": "7.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^19.0.7"
   },
   "devDependencies": {
